force-app/main/default/objects/Revenue_Plan__c/Revenue_Plan__c.object-meta.xml
<CustomObject>
    <label>Revenue Plan</label>
    <nameField>
        <label>Revenue Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>