force-app/main/default/objects/Revenue_Plan__c/fields/Actual_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Billable_Hours__c</fullName>
    <label>Actual Billable Hours</label>
    <summarizedField>Revenue_Plan_Resource__c.Actual_Billable_Hours__c</summarizedField>
    <summaryForeignKey>Revenue_Plan_Resource__c.Revenue_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>