force-app/main/default/objects/Revenue_Plan__c/fields/Actual_Service_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Service_Revenue__c</fullName>
    <label>Actual Service Revenue</label>
    <summarizedField>Revenue_Plan_Resource__c.Resource_Actual_Revenue__c</summarizedField>
    <summaryForeignKey>Revenue_Plan_Resource__c.Revenue_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>