force-app/main/default/objects/Revenue_Plan__c/fields/Average_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Billing_Rate__c</fullName>
    <formula>IF(ISPICKVAL(Status__c,&quot;Closed&quot;),
Actual_Service_Revenue__c / Actual_Billable_Hours__c,
 Expected_Service_Revenue__c / Expected_Billable_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Billing Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>