force-app/main/default/objects/Revenue_Plan__c/fields/Expected_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expected_Billable_Hours__c</fullName>
    <label>Expected Billable Hours</label>
    <summarizedField>Revenue_Plan_Resource__c.Expected_Billable_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Revenue_Plan_Resource__c.Name</field>
        <operation>notContain</operation>
        <value>Unassigned</value>
    </summaryFilterItems>
    <summaryForeignKey>Revenue_Plan_Resource__c.Revenue_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>