force-app/main/default/objects/Revenue_Plan__c/fields/Fixed_Fee_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee_Revenue__c</fullName>
    <label>Fixed Fee Revenue</label>
    <summarizedField>Revenue_Plan_Resource__c.Fixed_Fee_Revenue__c</summarizedField>
    <summaryForeignKey>Revenue_Plan_Resource__c.Revenue_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>