force-app/main/default/objects/Revenue_Plan__c/fields/Pct_Fixed_Fee_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Pct_Fixed_Fee_Revenue__c</fullName>
    <formula>IF(ISPICKVAL( Status__c,&quot;Closed&quot; ),
 Fixed_Fee_Revenue__c /  Total_Revenue__c,
  Fixed_Fee_Revenue__c / (Expected_Service_Revenue__c +  Product_Revenue__c)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Fixed Fee Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>