force-app/main/default/objects/Revenue_Plan__c/fields/Product_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Product_Revenue__c</fullName>
    <label>Product Revenue</label>
    <summarizedField>Product_Revenue_Lines__c.Revenue__c</summarizedField>
    <summaryForeignKey>Product_Revenue_Lines__c.Revenue_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>