force-app/main/default/objects/Revenue_Plan__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>IF(ISPICKVAL(Status__c,&quot;Closed&quot;),Total_Revenue__c, Expected_Service_Revenue__c +  Product_Revenue__c )
- Tax_Liability__c
- 26000
- 1000
- (39000/12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>