force-app/main/default/objects/Revenue_Plan__c/fields/Target_Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Target_Billable_Rate__c</fullName>
    <label>Target Billable Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>