force-app/main/default/objects/Revenue_Plan__c/fields/Tax_Liability__c.field-meta.xml
<CustomField>
    <fullName>Tax_Liability__c</fullName>
    <formula>(IF(ISPICKVAL(Status__c,&quot;Closed&quot;),Total_Revenue__c, Expected_Service_Revenue__c +  Product_Revenue__c ) 
- 26000 
- 1000)* 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>