force-app/main/default/objects/Revenue_Plan__c/fields/Unrealized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Unrealized_Revenue__c</fullName>
    <label>Unrealized Revenue</label>
    <summarizedField>Revenue_Plan_Resource__c.Resource_Expected_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Revenue_Plan_Resource__c.Resource__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Revenue_Plan_Resource__c.Revenue_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>