force-app/main/default/objects/Revenue_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Expected_Service_Revenue__c</columns>
    <columns>Actual_Service_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>